# py-gitlab-monitor

./: .gitignore  LICENSE  README.md  TODO  config-dummy.json  main.py  pyproject.toml
.devcontainer/: devcontainer.json
app/: main.py  utils.py
app/components/: pipeline_card.py  project_card.py
app/services/: config.py  gitlab_service.py
app/views/: all_pages.py  dashboard.py
config/: config-dummy.json
src/gui/: flowlayout.py  main_window.py  main_window.ui  project-card.ui  project_card.py
src/services/: gitlab_service.py
